mouse move complete

--- a/event.html
+++ b/event.html
@@ -4,17 +4,33 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <script src="https://unpkg.com/vue"></script>
+        <style type="text/css">
+            #canvas{
+
+    width: 600px;
+    padding: 200px 20px;
+    text-align:center;
+    border:1px solid red;
+    background-color: black;
+    color:white;
+
+}
+        </style>
     </head>
     <body>
         <div id="event-handle">
                 <H1>Event Handling</H1>
-                <button v-on:click="add">Add a year</button>
-                <button v-on:click="sub">Subtract a year</button>
+                <button @click="add(5)">Add a year</button>
+                <button @click="sub(2)">Subtract a year</button>
 
                 <h3>My Age is : {{age}}</h3>
-            
+            <div id="canvas" v-on:mousemove="updateXY">
+Move on:{{x}},{{y}}
+        </div>
 
         </div>
+
+
         <script src="app.js"></script>
     </body>
 </html>
