Data Binding Lesson

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <strong><i>{{greet('afternoon')}}</i></strong>
             <h3>Name : {{name}}</h3>
             <h4>Roll Number {{roll}}</h4>
+            <a v-bind:href=mysite>Tech Era Coding</a>
 
         </div>
         <script src="app.js"></script>
