--- a/keyboard_event.html
+++ b/keyboard_event.html
@@ -8,8 +8,8 @@
     <body>
         <div id="keyboard-event">
                 <H1>Keyboard Event Handling</H1>
-                  Name  <input type="text" v-on:keyup="logName">
-                  <input type="text" v-on:keyup="logAge">
+                  Name  <input type="text" v-on:keyup="logName"/>
+                  <input type="text" v-on:keyup="logAge"/>
 
         </div>
 
