two way data binding

--- a/keyboard_event.html
+++ b/keyboard_event.html
@@ -11,6 +11,9 @@
                     <input type="text" v-on:keyup.enter="logName">
                     <input type="text" v-on:keyup.enter="logEmail">
 
+                    <input type="text" v-model="newName">
+                    <span>{{newName}}</span>
+
         </div>
 
 
